--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@ title : DEVQUIXOTE
 foo: bar
 tagline: Site Tagline
 author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
+  name : Lance Woodson
+  email : lance@webmaneuvers.com
+  github : lwoodson
   twitter : username
   feedburner : feedname
 
